--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Medick</string>
     <string name="register">Registracija</string>
-    <string name="if_you_have_an_account_you_can_login_here">If you have an account, you can login here.</string>
+    <string name="if_you_have_an_account_you_can">Ako imate već postojeći račun,</string>
     <string name="adrsa_stanovanja">Adrsa stanovanja</string>
     <string name="telefon">Telefon</string>
     <string name="email">Email</string>
@@ -10,4 +10,9 @@
     <string name="buttonRegisterText">Register</string>
     <string name="ponovite_lozinku">Ponovite lozinku</string>
     <string name="lozinka">Lozinka</string>
+    <string name="login_here"><u>ovdje se prijavite.</u></string>
+    <string name="login">Login</string>
+    <string name="buttonLoginText">Login</string>
+    <string name="if_you_dont_have_an_account_you_can">Ako nemate već postojeći račun,</string>
+    <string name="register_here">ovdje se registrirajte.</string>
 </resources>
