implemented activity for reminders and add new reminder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,28 @@
     <string name="email">Email</string>
     <string name="prezime">Prezime</string>
     <string name="ime">Ime</string>
-    <string name="buttonRegisterText">Register</string>
+    <string name="buttonRegisterText">Registriraj se</string>
     <string name="ponovite_lozinku">Ponovite lozinku</string>
     <string name="lozinka">Lozinka</string>
     <string name="login_here"><u>ovdje se prijavite.</u></string>
-    <string name="login">Login</string>
-    <string name="buttonLoginText">Login</string>
+    <string name="login">Prijava</string>
+    <string name="buttonLoginText">Prijavite se</string>
     <string name="if_you_dont_have_an_account_you_can">Ako nemate već postojeći račun,</string>
     <string name="register_here">ovdje se registrirajte.</string>
+    <string name="podsjetnik">Podsjetnik</string>
+    <string name="novipodsjetnik">Novi podsjetnik</string>
+    <string name="ime_lijeka">Ime lijeka:</string>
+    <string name="ime_lijeka_hint">Fluimukan</string>
+    <string name="doza_lijeka_hint">50mg</string>
+    <string name="doza_lijeka">Doza lijeka:</string>
+    <string name="na_in_primjene">Način primjene</string>
+    <string name="broj_puta_dnevno_hint">5</string>
+    <string name="puta_dnevno">puta dnevno</string>
+    <string name="tableta">tableta</string>
+    <string name="broj_tableta_hint">2</string>
+    <string name="sati_razmaka">sati razmaka</string>
+    <string name="broj_sati_razmaka_hint">8</string>
+    <string name="datum_prvog_uzimanja_lijeka">Datum prvog uzimanja lijeka</string>
+    <string name="izaberi_datum">Izaberi datum</string>
+    <string name="postavi_novi_podjestnik">Postavi novi podjestnik</string>
 </resources>
