--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="izaberi_datum">Izaberi datum</string>
     <string name="postavi_novi_podjestnik">Postavi novi podjestnik</string>
     <string name="listItemText">Lijek</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
