refactored main activities to fragments that are hosted in hostActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,14 @@
     <string name="krvni_tlak">Krvni tlak</string>
     <string name="krvni_tlak_iznos_hint">50 mmHg</string>
     <string name="dodaj_nove_vitale">Dodaj nove vitale</string>
+    <string name="title_activity_host">HostActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="reminders">Podsjetnici</string>
+    <string name="vitals">Vitali</string>
 </resources>
