--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="reminders">Podsjetnici</string>
     <string name="vitals">Vitali</string>
+    <string name="profil">Profil</string>
 </resources>
